Fri Mar 26 21:32:28 CET 2004 (tk)
---------------------------------
  * libclamav: scan VPOP3 mail files (thanks to Steve <steveb*webtribe.net>)

Fri Mar 26 16:22:45 CET 2004 (tk)
---------------------------------
  * libclamav: scanners: use cli_writen()

Fri Mar 26 11:32:08 GMT 2004 (trog)
-----------------------------------
  * libclamav: check for EINTR in cli_readn/cli_writen

Fri Mar 26 11:21:34 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Use cli_writen()
  * clamav-milter:	Added some debug information to clamd_send()

Fri Mar 26 09:47:50 GMT 2004 (trog)
-----------------------------------
  * libclamav: Remove duplicate code. Fix memory leak.

Thu Mar 25 22:51:53 GMT 2004 (njh)
----------------------------------
  * libclamav:	Removed even more calls to realloc and some duplicate code

Thu Mar 25 13:53:37 CET 2004 (tk)
---------------------------------
  * libclamav: scanners: scan "X-Apparently-To: " mail files

Thu Mar 25 12:20:05 CET 2004 (tk)
---------------------------------
  * freshclam: use HTTP Range to limit data transfer for cvd headers
	       (patch by Tony Finch <dot*dotat.at>)

Wed Mar 24 09:19:12 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Reduce the number of calls to cli_realloc, since realloc
  	seems to be very slow on FreeBSD

Tue Mar 23 15:39:09 GMT 2004 (trog)
-----------------------------------
  * clamd: stop scanning if the client disconnects

Tue Mar 23 11:09:30 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	More restrictive about which characters can be used
	in filenames on DOS based systems

Tue Mar 23 09:26:18 GMT 2004 (njh)
----------------------------------
  * docs/man/clamav-milter.8:	Document the default value for --server, and
  	clamav-milter's load balancing/fault tolerance capabilities

Mon Mar 22 21:30:24 CET 2004 (tk)
---------------------------------
  * freshclam: require strict permissions for config file when HTTPProxyPassword