@@ -58,6 +58,7 @@ Kamil Andrusz <wizz*mniam.net>
 Patrick Bihan-Faou <patrick*mindstep.com>
 Len Budney <lbudney*pobox.com>
 Andrey Cherezov <andrey*cherezov.koenig.su>
+Tom G. Christensen <tgc*statsbiblioteket.dk>
 Damien Curtain <damien*pagefault.org>
 Michael Dankov <misha*btrc.ru>
 Alejandro Dubrovsky <s328940*student.uq.edu.au>
@@ -106,5 +107,6 @@ Gernot Tenchio <g.tenchio*telco-tech.de>
 Michael L Torrie <torriem*chem.byu.edu>
 Laurent Wacrenier <lwa*teaser.fr>
 David Woakes <david*mitredata.co.uk>
+Dale Woolridge <dwoolridge*drh.net>
 Leonid Zeitlin <lz*europe.com>
 Andoni Zubimendi <andoni*lpsat.net>
